# NonlinearOptimization

./: CMakeLists.txt  array.cpp  array.h  compile.sh  main.cpp  matrix.cpp  matrix.hpp  permutation.cpp  plot.py  scratch.cpp  ukol1.cpp
