# CMakeList.txt : CMake project for NonlinCVUT2020, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("NonlinCVUT2020")

# Add source to this project's executable.
add_executable (ukol1 "main.cpp" "array.h" "array.cpp")

# TODO: Add tests and install targets if needed.
